Tue Dec  4 16:54:00 2012  Eric Hodel  <drbrain@segment7.net>

	* .document:  Added ChangeLog and doc/ChangeLog-* as documentation

Tue Dec  4 16:47:46 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/parser/changelog.rb:  Added a ChangeLog parser to RDoc.
	* lib/rdoc/parser.rb:  ditto
	* test/rdoc/test_rdoc_parser_changelog.rb:  Test for above.

Tue Dec  4 16:23:32 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (path2class, path2module): use PRIsVALUE.

	* marshal.c (w_object, marshal_dump, marshal_load): use
	  rb_check_funcall if possible.

	* marshal.c (w_object, marshal_dump, r_object0, marshal_load): use
	  RB_GC_GUARD() (directly or indirectly) instead of volatile.

	* variable.c (rb_path_to_class): prevent the argument from GC.

Tue Dec 04 13:55:07 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_opts.h: enable optimization - operand unification.
	  Operand unification technique enable to combine
	  an instruction and specific operands and make new
	  instruction.

	* defs/opt_operand.def: add several configuration
	  of operand unification.

	* insns.def: use `int' instead to suppress warning.

Mon Dec  3 17:58:53 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y: replace parser->enc with current_enc.

Tue Dec  4 08:33:46 2012  Eric Hodel  <drbrain@segment7.net>

	* README.EXT:  Converted to RDoc format
	* README.EXT.ja:  ditto

Tue Dec  4 08:32:10 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/ri/driver.rb:  Fixed ri page display for files with
	  extensions.
	* test/rdoc/test_rdoc_ri_driver.rb:  Test for above

Tue Dec  4 04:11:50 2012  Eric Hodel  <drbrain@segment7.net>

	* .document:  Add NEWS for `ri ruby:NEWS`
	* NEWS:  Set format as rdoc
	* doc/NEWS-1.8.7:  ditto
	* doc/NEWS-1.9.1:  ditto
	* doc/NEWS-1.9.2:  ditto
	* doc/NEWS-1.9.3:  ditto

Mon Dec  3 20:37:22 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_exec.c: check VM_COLLECT_USAGE_DETAILS.

Mon Dec  3 20:28:02 2012  Koichi Sasada  <ko1@atdot.net>
